# numkit

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy.yaml
ci/readthedocs/: environment.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  fitting.txt  index.txt  installation.txt  observables.txt  src.txt  timeseries.txt
numkit/: __init__.py  integration.py  observables.py  timeseries.py
numkit/tests/: test_module.py
src/numkit/: __init__.py  _version.py  fitting.py  integration.py  observables.py  timeseries.py
src/numkit/tests/: __init__.py  test_fitting.py  test_integration.py  test_observables.py  test_timeseries.py
